--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
+  <style>
+    .btn {
+      color: pink;
+    }
+  </style>
 </head>
 <body>
-  <a href="./Coding_Four_Cuts/index.html">형원네컷</a>
-  <a href="./Movie/index.html">영화</a>
+  <a class="btn" href="./Coding_Four_Cuts/index.html">형원네컷</a>
+  <a class="btn" href="./Movie/index.html">영화</a>
 </body>
 </html>
