--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
   <link rel="manifest" href="/site.webmanifest">
   <style>
     .btn {
-      color: pink;
+      /* color: pink;
+      font-size: 25px;
+      text-decoration: none;
+      border: 1px solid red; */
+      background: #3498db;
+      background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+      background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+      background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+      background-image: -o-linear-gradient(top, #3498db, #2980b9);
+      background-image: linear-gradient(to bottom, #3498db, #2980b9);
+      -webkit-border-radius: 28;
+      -moz-border-radius: 28;
+      border-radius: 28px;
+      font-family: Arial;
+      color: #ffffff;
+      font-size: 20px;
+      padding: 10px 20px 10px 20px;
+      text-decoration: none;
     }
   </style>
 </head>
