style.css 추가 + 버튼 꾸미기 + 프로젝트 영끌...

--- a/index.html
+++ b/index.html
@@ -5,35 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>yangu1455's page</title>
+  <link rel="stylesheet" href="./style.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <style>
-    .btn {
-      /* color: pink;
-      font-size: 25px;
-      text-decoration: none;
-      border: 1px solid red; */
-      background: #3498db;
-      background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-      background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-      background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-      background-image: -o-linear-gradient(top, #3498db, #2980b9);
-      background-image: linear-gradient(to bottom, #3498db, #2980b9);
-      -webkit-border-radius: 28;
-      -moz-border-radius: 28;
-      border-radius: 28px;
-      font-family: Arial;
-      color: #ffffff;
-      font-size: 20px;
-      padding: 10px 20px 10px 20px;
-      text-decoration: none;
-    }
-  </style>
 </head>
 <body>
-  <a class="btn" href="./Coding_Four_Cuts/index.html">형원네컷</a>
-  <a class="btn" href="./Movie/index.html">영화</a>
+  <p class="pad-basic">현재 진행중인 프로젝트</p>
+  <div class="pad-basic">
+    <a class="btn" href="../TIL/JS/toy-project/practice/HYUNGWON ⭐️/index.html">HYUNGWON ⭐️</a>
+    <a class="btn" href="../toy-project/황지선/6주차_JEJUBEER/index.html">제주맥주 클론코딩 🍻</a>
+    <a class="btn">POTATO STUDY 🥔</a> <!-- href="../TIL/JS/toy-project/practice/POTATO STUDY 🥔/index.html" -->
+    <!-- <a class="btn" href=""></a> -->
+  </div>
+  <p class="pad-basic">완성된 프로젝트</p>
+  <div class="pad-basic">
+    <a class="btn" href="./Coding_Four_Cuts/index.html">형원네컷 📸</a>
+    <a class="btn" href="./Movie/index.html">영화 소개 사이트 🎞️</a>
+    <a class="btn" href="../toy-project/황지선/4주차_GroceryBud/index.html">To do list 📝</a>
+    <!-- <a class="btn" href="../toy-project/황지선/4주차_LoremIpsum/index.html">가로 시작하는 순우리말 단어 📜</a> -->
+    <a class="btn" href="../toy-project/황지선/5주차_TetrisGame/index.html">테트리스 게임 🕹️</a>
+  </div>
 </body>
 </html>
