링크 연결 고침

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <body>
   <p class="pad-basic">현재 진행중인 프로젝트</p>
   <div class="pad-basic">
-    <a class="btn" href="../TIL/JS/toy-project/practice/HYUNGWON ⭐️/index.html">HYUNGWON ⭐️</a>
-    <a class="btn" href="../toy-project/황지선/6주차_JEJUBEER/index.html">제주맥주 클론코딩 🍻</a>
-    <a class="btn">POTATO STUDY 🥔</a> <!-- href="../TIL/JS/toy-project/practice/POTATO STUDY 🥔/index.html" -->
+    <a class="btn" href="https://github.com/yangu1455/TIL/tree/master/JS/toy-project/practice/HYUNGWON%20%E2%AD%90%EF%B8%8F">HYUNGWON ⭐️</a>
+    <a class="btn" href="./6주차_JEJUBEER/index.html">제주맥주 클론코딩 🍻</a>
+    <a class="btn" href="https://github.com/yangu1455/TIL/tree/master/JS/toy-project/practice/POTATO%20STUDY%20%F0%9F%A5%94">POTATO STUDY 🥔</a>
     <!-- <a class="btn" href=""></a> -->
   </div>
   <p class="pad-basic">완성된 프로젝트</p>
   <div class="pad-basic">
     <a class="btn" href="./Coding_Four_Cuts/index.html">형원네컷 📸</a>
     <a class="btn" href="./Movie/index.html">영화 소개 사이트 🎞️</a>
-    <a class="btn" href="../toy-project/황지선/4주차_GroceryBud/index.html">To do list 📝</a>
+    <a class="btn" href="./To do list/index.html">To do list 📝</a>
     <!-- <a class="btn" href="../toy-project/황지선/4주차_LoremIpsum/index.html">가로 시작하는 순우리말 단어 📜</a> -->
-    <a class="btn" href="../toy-project/황지선/5주차_TetrisGame/index.html">테트리스 게임 🕹️</a>
+    <a class="btn" href="./Tetris Game/index.html">테트리스 게임 🕹️</a>
   </div>
 </body>
 </html>
