제주맥주 로고 불러오기 오류 해결

--- a/6주차_JEJUBEER/index.html
+++ b/6주차_JEJUBEER/index.html
@@ -150,7 +150,7 @@
       <div class="section__main4--content">
         <div class='content_1'>
           <div class="text">
-            <img src="../6주차_JEJUBEER/images/로고2.png" alt="piaf_logo">
+            <img src="../6주차_JEJUBEER/images/로고2.png" alt="piaf_logo">
             <p>삐아프는 그 순간을 찬란히 빛낼 수 있는 초콜릿을 만드는 아티장 쇼콜라티에 입니다.<br>
               <br>
               제주맥주는 이번 배럴 시리즈의 테마 '달콤한 선물'을 위해<br>
@@ -167,7 +167,7 @@
         <hr>
         <div class="content_2">
           <div class="text">
-            <img src="../6주차_JEJUBEER/images/로고3.png" alt="JEJU_logo">
+            <img src="../6주차_JEJUBEER/images/로고3.png" alt="JEJU_logo">
             <p>제주맥주 배럴 시리즈 : 삐아프 아티장 쇼콜라티에 에디션은<br>
               배럴에 수개월간 숙성시킨 짙은 풍미의 임페리얼스타우트 원주에,<br>
               타히티와 마다가스카르 바닐라빈과 카카오를 더하여, 부드러운 달콤함을 자아냅니다.<br>
