--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <p class="pad-basic">완성된 프로젝트</p>
   <div class="pad-basic">
     <a class="btn" href="./Coding_Four_Cuts/index.html">형원네컷 📸</a>
+    <a class="btn" href="https://github.com/yangu1455/Movie-Review-Community">영화 리뷰 게시판 🎞️</a>
     <a class="btn" href="./Movie/index.html">영화 소개 사이트 🎞️</a>
     <a class="btn" href="./To do list/index.html">To do list 📝</a>
     <!-- <a class="btn" href="../toy-project/황지선/4주차_LoremIpsum/index.html">가로 시작하는 순우리말 단어 📜</a> -->
