--- a/Coding_Four_Cuts/index.html
+++ b/Coding_Four_Cuts/index.html
@@ -127,7 +127,92 @@
       width: 150px;
       cursor: pointer;
     }
+
+    #modal.modal-overlay {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        left: 0;
+        top: 0;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background: rgba(255, 255, 255, 0.25);
+        backdrop-filter: blur(1.5px);
+        border-radius: 10px;
+        display: none;
+      }
+
+      #modal .modal-window {
+        background: white;
+        box-shadow: 0 8px 32px 0 grey;
+        backdrop-filter: blur(13.5px);
+        -webkit-backdrop-filter: blur(13.5px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        width: 350px;
+        height: 350px;
+        position: relative;
+        padding: 10px;
+      }
+
+      #modal .close-area {
+        display: inline;
+        float: right;
+        padding-right: 10px;
+        cursor: pointer;
+        color: black;
+        position: absolute;
+        right: 0;
+      }
+
+      #modal .content {
+        margin-top: 10px;
+        padding: 0px 10px;
+        color: black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      #modal .content img {
+        width: 65%;
+        margin-top: 30px;
+        margin-bottom: 20px;
+      }
+
+      #modal .content span {
+        font-size: 20px;
+        margin: 2px;
+        font-weight: 900;
+        font-family: auto;
+      }
+
+      #modal .content button {
+        position: absolute;
+        bottom: 20px;
+        width: 90%;
+        height: 50px;
+        color: white;
+        background: green;
+        border: 0;
+        border-radius: 10px;
+        font-size: 15px;
+        font-weight: 500;
+        cursor: pointer;
+      }
   </style>
+    <script>
+      function showModal() {
+        const modal = document.getElementById("modal");
+        modal.style.display = "flex";
+      }
+  
+      function closeModal() {
+        const modal = document.getElementById("modal");
+        modal.style.display = "none";
+      }
+    </script>
 </head>
 <body>
   <div class="container">
@@ -175,6 +260,19 @@
   </div>
   <div class="absolute-rtan-area">
     <img src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free_photos/rtans.png" onclick="showModal()" />
+  </div>
+  <div id="modal" class="modal-overlay">
+    <div class="modal-window">
+      <div class="close-area" onclick="closeModal()">𝗫</div>
+      <div class="content">
+        <img src="./rtans.png" />
+        <span>여기까지 온 당신</span>
+        <span>개발자가 적성일지도?</span>
+        <button onclick="location.href='https://spartacodingclub.kr/'">
+          0원으로 개발자 시작하기
+        </button>
+      </div>
+    </div>
   </div>
 </body>
 </html>
